[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/UI/debug UI/debug value display.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Player/other/Player 3rd Person.gd" type="Script" id=2]
[ext_resource path="res://models/characters/Nikki/v2/Nikki Character Model.tscn" type="PackedScene" id=3]





[sub_resource type="CapsuleShape" id=1]
height = 4.21684

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.0416667

[sub_resource type="Animation" id=3]
length = 1.04167

[node name="Nikkiv1" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0619923, 0 )
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -0.962379, -4.20669e-08, 0, 2.97448, 0.36077 )
shape = SubResource( 1 )

[node name="raycast_floor" type="RayCast" parent="CollisionShape"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, -3 )
enabled = true
cast_to = Vector3( 0, -1.2, 0 )
collide_with_areas = true

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0 )

[node name="Pivot" type="Spatial" parent="Head"]

[node name="camera_raycast" type="RayCast" parent="Head/Pivot"]
enabled = true
cast_to = Vector3( 0, 0, -8.5 )

[node name="Camera" type="Camera" parent="Head/Pivot"]
transform = Transform( -1, 0, 3.25841e-07, 0, 1, 0, -3.25841e-07, 0, -1, 0, 0, -8.5 )
size = 4.99
far = 8192.0

[node name="Camera_default_loc" type="Spatial" parent="Head/Pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -8.5 )

[node name="Rig" parent="." instance=ExtResource( 3 )]

[node name="cast_position" type="Position3D" parent="Rig"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.914899, 2.78896, 0.107908 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 2 )
anims/Walk = SubResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="Debug Value Display" parent="CanvasLayer" instance=ExtResource( 1 )]
